<resources>
    <string name="app_name" translatable="false">BusTO</string>
    <string name="app_name_full" translatable="false">Libre BusTO</string>
    <string name="app_name_debug" translatable="false">BusTO dev</string>
    <string name="app_name_gitpull" translatable="false">BusTO git</string>
    <string name="app_description">You\'re using the latest in technology when it comes to respecting your privacy.
    </string>
    <string name="search">Search</string>
    <string name="qrcode">Scan QR Code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_barcode_scanner_install">Barcode scanner app is needed</string>
    <string name="message_install_barcode_scanner">This functionality requires another app to scan the QR codes, which has not been found on the device. We suggest using Binary Eye, which
        is open source software, would you like to install it now?
    </string>
    <string name="insert_bus_stop_number">Bus stop number</string>
    <string name="insert_bus_stop_name">Bus stop name</string>
    <string name="insert_bus_stop_number_error">Insert bus stop number</string>
    <string name="insert_bus_stop_name_error">Insert bus stop name</string>
    <string name="route_towards_destination">%1$s towards %2$s</string>
    <string name="route_towards_unknown">%s (unknown destination)</string>
    <string name="network_error">Verify your Internet connection!</string>
    <string name="no_bus_stop_have_this_name">Seems that no bus stop has this name</string>
    <string name="no_arrivals_stop">No arrivals found for this stop</string>
    <string name="parsing_error">Error parsing the 5T/GTT website (damn site!)</string>
    <string name="query_too_short">Name too short, type more characters and retry
    </string>
    <string name="passages_fill">Arrivals at: %1$s</string>
    <string name="passages">Arrivals at:</string>
    <string name="results">Choose the bus stop…</string>
    <string name="line">Line</string>
    <string name="lines">Lines</string>
    <string name="urban_lines">Urban lines</string>
    <string name="extraurban_lines">Extra urban lines</string>
    <string name="turist_lines">Tourist lines</string>
    <string name="no_lines_found">No lines found in this category</string>
    <string name="no_lines_found_query">No lines match the searched name</string>
    <string name="direction_duep">Destination:</string>
    <string name="lines_fill">Lines: %1$s</string>
    <string name="line_fill">Line %1$s</string>
    <string name="line_fill_towards">Line %1$s towards:</string>
    <string name="stop_fill">Stop %1$s</string>
    <string name="vehicle_fill">Vehicle %1$s</string>
    <string name="no_passages">No timetable found</string>
    <string name="no_qrcode">No QR code found, retry</string>
    <string name="scan_qr_code_stop">Scan QR code at the bus stop</string>
    <string name="internal_error">Unexpected internal error, cannot extract data from GTT/5T website</string>
    <string name="action_help">Help</string>
    <string name="action_about">About the app</string>
    <string name="action_about_more">More about</string>
    <string name="action_wiki">Open the wiki</string>
    <string name="hack_url">https://gitpull.it/w/librebusto/en/</string>
    <string name="action_source">Source code</string>
    <string name="action_licence">Licence</string>
    <string name="action_author">Meet the author</string>
    <string name="added_in_favorites">Bus stop is now in your favorites</string>
    <string name="removed_from_favorites">Bus stop removed from your favorites</string>
    <string name="favorites_line_add">Added line to favorites</string>
    <string name="favorites_line_remove">Remove line from favorites</string>
    <string name="favorites_lines">Favorites</string>
    <string name="action_favorites">Favorites</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_map">Map</string>
    <string name="tip_add_favorite">No favorites? Arghh! Press on a bus stop star to populate this list!</string>
    <string name="action_remove_from_favourites">Delete</string>
    <string name="action_rename_bus_stop_username">Rename</string>
    <string name="dialog_rename_bus_stop_username_title">Rename the bus stop</string>
    <string name="dialog_rename_bus_stop_username_reset_button">Reset</string>
    <string name="about_activity">About the app</string>
    <string name="howDoesItWork">
        <b>Tap the star</b>
        to add the bus stop to the favourites\n\n<b>How to read timelines:</b>\n<b>&#160;&#160;&#160;12:56*</b> Real-time
        arrivals\n<b>&#160;&#160;&#160;12:56</b> &#160; Scheduled arrivals\n\n<b>Pull down to refresh</b> the timetable
        \n <b>Long press on Arrivals source</b> to change the source of the arrival times
    </string>
    <string name="hint_button">GOT IT!</string>
    <string name="arrival_times">Arrival times</string>
    <string name="no_passages_title">No arrivals found for lines:</string>
    <string name="about_history_top">
        <![CDATA[
        <h1>Welcome!</h1>

        <p>Thanks for using BusTO, an <b>open source</b> and <b>independent</b> app useful to move around Torino using a <b>Free/Libre software</b>.</p>
        <br>
        <p>Why use this app?</p>
		<p>
        - You\'ll never be <b>tracked</b><br>
        - You\'ll never see boring <b>ads</b><br>
        - We\'ll always respect your <b>privacy</b><br>
        - Moreover, it\'s lightweight!<br>
        </p>
        <br>
        <h2>Introductory tutorial</h2>
        <p>If you want to see the introduction again, use the button below:</p>
        ]]></string>
    <string name="about_channel">
        <![CDATA[
    <h2>News and Updates</h2>
    <p>On the Telegram channel, you can find information about the latest app updates</p>
    ]]></string>
    <string name="about_how">
        <![CDATA[
    <h2>How does it work?</h2>
        <p>This app is able to do all the amazing things it does by pulling data from <b>www.gtt.to.it</b>, <b>www.5t.torino.it</b> or <b>muoversiatorino.it</b> "for personal use", along with open data from the AperTO (aperto.comune.torino.it) website.</p>
        <br>
		<p>The work of several people is behind this app, in particular:<br>
		- <b>Fabio Mazza</b>, current senior rockstar developer.<br>
        - <b>Andrea Ugo</b>, current junior rockstar developer.<br>
		- <b>Silviu Chiriac</b>, designer of the 2021 logo.<br>
		- <b>Marco M</b>, rockstar tester and bug hunter.<br>
		- <b>Ludovico Pavesi</b>, previous senior rockstar developer (asd).<br>
		- <b>Valerio Bozzolan</b>, maintainer and infrastructure (sponsor).<br>
		- <b>Marco Gagino</b>, contributor and first icon creator.<br>
		- <b>JSoup</b> web scraper library.<br>
		- <b>makovkastar</b> floating buttons.<br>
        - <b>Google</b> for icons and support and design libraries.<br>
        - Other icons from <b>Bootstrap</b>, <b>Feather</b>, <b>Remix</b> and <b>Hero Icons</b>.<br>
		- All the contributors, and the beta testers, too!
		</p>
		<br>
		 <p>If you want more detailed information, or want to donate money to support the development, use the buttons below!</p>
    ]]></string>
    <string name="about_history_bottom">
        <![CDATA[
		<h2>Licenses</h2>
		<p>The app and the related source code are released by Valerio Bozzolan and the other authors under the terms of the <i>GNU General Public License v3+</i>).
		So everyone is allowed to use, to study, to improve and to share this app by <b>any kind of means</b> and for <b>any purpose</b>: under the conditions of maintaining this rights and of attributing the original work to Valerio Bozzolan.</p>
        <br>
		<h2>Notes</h2>
		<p>This app has been developed with the <b>hope to be useful to everyone</b>, but comes without ANY warranty of any kind.</p>
		<p>The data used by the app comes <b>directly</b> from GTT and other public agencies: if you find any errors, please take it up to them, not to us.</p>
		<p>This translation is kindly provided by Riccardo Caniato, Marco Gagino and Fabio Mazza.</p>
		<p>Now you can hack public transport, too! :)</p>
    ]]>
    </string>
    <string name="cant_add_to_favorites">Cannot add to favorites (storage full or corrupted database?)!</string>
    <string name="action_view_on_map">View on a map</string>
    <string name="action_open_line">Show line details</string>
    <string name="action_show_direction">Show full direction</string>
    <string name="cannot_show_on_map_no_activity">Cannot find any application to show it in</string>
    <string name="cannot_show_on_map_no_position">Cannot find the position of the stop</string>
    <string name="list_fragment_debug" translatable="false">ListFragment - BusTO</string>
    <string name="mainSharedPreferences" translatable="false">it.reyboz.bustorino.preferences</string>
    <string name="databaseUpdatingPref" translatable="false">db_is_updating</string>
    <string name="near_me_title">Near me</string>
    <string name="nearby_stops_message">Nearby stops</string>
    <string name="nearby_arrivals_message">Nearby arrivals</string>
    <string name="app_version">App version</string>
    <string name="num_stops_nearby_not_number">The number of stops to show in the recent stops is invalid</string>
    <string name="invalid_number">Invalid value, put a valid number</string>
    <string name="position_searching_message">Finding location</string>
    <string name="no_stops_nearby">No stops nearby</string>
    <string name="no_stop_found_search_name">No stop found matching this name</string>
    <string name="no_stop_found_search_number">No stop found matching this number</string>
    <string name="searching_arrivals_indefinite">Loading arrival times</string>
    <string name="no_stops_nearby_arrivals">No stops nearby to search arrival times for</string>
    <string name="pref_num_elements">Minimum number of stops</string>
    <string name="main_menu_pref">Preferences</string>
    <string name="title_activity_settings">Settings</string>
    <string name="general_settings">General</string>
    <string name="settings_experimental">Experimental features</string>
    <string name="settings_search_radius">Maximum distance (meters)</string>
    <string name="pref_recents_group_title">Recent stops</string>
    <string name="enable_position_message_nearby">Allow access to location to show stops nearby</string>
    <string name="database_update_req">Force database update</string>
    <string name="database_update_req_descr">Touch to update the app database now</string>
    <string name="show_arrivals">Show arrivals</string>
    <string name="arrival_times_choice_title">Sources of arrival times</string>
    <string name="arrival_times_choice_explanation">Select which sources of arrival times to use</string>
    <string name="experiments">Experiments</string>
    <string name="pref_directions_capitalize">Capitalize directions</string>
    <string name="pref_shown_startup">Section to show on startup</string>
    <string name="pref_experimental_msg">Enable experiments</string>
    <string name="positions_source_pref_title">Source of real time positions for buses and trams</string>
    <string name="remove_all_trips">Remove trips data (free up space)</string>
    <string name="tutorial_action">Show tutorial</string>
    <string name="grant_location_permission">Grant location permission</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="backup_title">Backup</string>
    <string name="restore_title">Restore</string>
    <string name="btn_backup_message">Backup to file</string>
    <string name="btn_load_backup_message">Import data from backup</string>
    <string name="load_file_favorites">Import favorites from backup</string>
    <string name="load_preferences">Import preferences from backup</string>
</resources>