<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="@string/general_settings">
        <androidx.preference.ListPreference
            android:key="startup_screen_to_show"
            android:entries="@array/first_screen_shown"
            android:entryValues="@array/first_screen_values"
            android:title="@string/pref_shown_startup"
            android:summary="%s"
            />

        <androidx.preference.ListPreference
                android:key="@string/pref_positions_source"
                android:entries="@array/positions_source_sel"
                android:entryValues="@array/positions_source_values"
                android:title="@string/positions_source_pref_title"
            />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
            android:title="@string/pref_recents_group_title">
        <!--
    <androidx.preference.EditTextPreference
            android:defaultValue="10"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:title="@string/pref_num_elements" android:key="@string/pref_key_num_recents"
            app:useSimpleSummaryProvider="true"
            android:digits="0123456789"
    />
    -->
        <androidx.preference.SeekBarPreference
                android:title="@string/pref_num_elements" android:key="@string/pref_key_num_recents"
                android:defaultValue="6"
                android:max="40"
                app:min="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:showSeekBarValue="true"

        />
    <androidx.preference.SeekBarPreference
            android:title="@string/settings_search_radius"
            android:key="@string/pref_key_radius_recents"
            android:defaultValue="500"
            android:max="1000"
            app:min="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:showSeekBarValue="true"

    />

    </androidx.preference.PreferenceCategory>
    <!--
    <androidx.preference.Preference
            android:layout="@layout/pref_extra_version"
            android:key="version"
    />
    -->
    <androidx.preference.PreferenceCategory android:title="@string/arrival_times">

        <androidx.preference.MultiSelectListPreference
            android:key="arrivals_fetchers_use_setting"
            android:title="@string/arrival_times_choice_title"
            android:summary="@string/arrival_times_choice_explanation"
            android:entries="@array/arrival_times_source_list"
            android:entryValues="@array/arrivals_sources_values"
            android:defaultValue="@array/arrivals_sources_values_default"
            />

        <androidx.preference.ListPreference
            android:title="@string/pref_directions_capitalize"
            android:entries="@array/directions_capitalize"
            android:entryValues="@array/directions_capitalize_keys"
            android:key="@string/pref_arrival_times_capit"
        />
    </androidx.preference.PreferenceCategory>

    <!--TODO: If we want lines preferences (eg showing arrivals on click)
    <androidx.preference.PreferenceCategory android:title="@string/lines">
        <androidx.preference.CheckBoxPreference
                android:title=""
            />
    </androidx.preference.PreferenceCategory>
    -->

    <androidx.preference.PreferenceCategory android:title="Database">
            <androidx.preference.Preference
                android:title="@string/database_update_req"
                android:summary="@string/database_update_req_descr"
                android:key="pref_db_update_now"
            />
        <androidx.preference.Preference
                android:title="@string/remove_all_trips"
                android:key="pref_clear_gtfs_trips"
            />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/backup_restore">
        <androidx.preference.Preference
            android:title="@string/backup_activity"
            android:key="pref_backup_open"
            />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
            android:title="@string/settings_experimental">
        <androidx.preference.SwitchPreferenceCompat
                android:defaultValue="false"
                android:title="@string/pref_experimental_msg" android:key="@string/pref_key_experimental"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
