<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="it.reyboz.bustorino.fragments.NearbyStopsFragment"
>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nearby_stops_message" android:id="@+id/titleTextView"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="15dp"
            android:paddingTop="3dp"
            android:fontFamily="@font/lato_bold"
            android:textSize="23sp"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/switchButton"
            app:layout_constraintBottom_toBottomOf="@id/switchButton"

    />
    <androidx.appcompat.widget.AppCompatButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:text="@string/show_arrivals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@color/blue_500"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nearbyBarrier"
            android:layout_marginTop="5dp"
            app:constraint_referenced_ids="titleTextView,switchButton"
            app:barrierDirection="bottom"
    />

    <ProgressBar
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/horizontalProgressBar"
            app:layout_constraintTop_toBottomOf="@id/nearbyBarrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/nearbyTopSeparator"

    />
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator"
            android:id="@+id/nearbyTopSeparator"
            app:layout_constraintTop_toBottomOf="@id/nearbyBarrier"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/stopGridRecyclerView"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:visibility="gone"
            android:clipChildren="false"
            android:clipToPadding="true"
            android:horizontalSpacing="10dp"
            android:verticalSpacing="10dp"
            app:layout_constraintTop_toBottomOf="@id/nearbyTopSeparator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />


    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/circularProgressBar"
            android:layout_marginTop="25dp"
            android:progressDrawable="@color/blue_620"
            android:indeterminate="true"
            android:indeterminateTint="@color/blue_620"
            android:layout_below="@+id/titleTextView"
            android:layout_centerHorizontal="true"
            android:visibility="gone"

            app:layout_constraintTop_toBottomOf="@id/nearbyBarrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/positionLoadingTextView"
              android:text="@string/position_searching_message"
              android:layout_marginTop="8dp"
              android:textSize="15sp"
              android:layout_centerHorizontal="true"
              android:visibility="gone"
              app:layout_constraintTop_toBottomOf="@id/circularProgressBar"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              />
    <TextView
            android:text="@string/enable_position_message_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messageTextView"
            android:fontFamily="@font/lato_regular"
            android:visibility="visible"
            android:textAppearance="@style/Base.ThemeOverlay.AppCompat.Light"
            android:layout_below="@+id/titleTextView"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="?android:textColorSecondary"

            app:layout_constraintTop_toBottomOf="@id/nearbyBarrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageTextView"
            android:layout_centerHorizontal="true"
            android:text="@string/grant_location_permission"
            android:visibility="visible"
            android:id="@+id/grantLocationButton"
            android:layout_marginTop="15dp"

            app:layout_constraintTop_toBottomOf="@id/messageTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



</androidx.constraintlayout.widget.ConstraintLayout>
